# consciousness-benchmark

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  run_experiment.py
configs/: night.json
consciousness_benchmark/: __init__.py  __main__.py  cli.py
docs/: FAQ.md  api.md  benchmark_mvp_20260521.md  benchmark_reference_report_20260521.csv  benchmark_reference_report_20260521.md  consciousness_construct_variation_paths_20260522.md  feedback_log.md  first_batch_sync_20260521.md  gating_agency_refactor_20260521.md  index.md  measurement_strengthening_20260521.md  measurement_validation_initial_results_20260521.md  measurement_validation_plan.md  publication_links.md  quickstart.md  release_dry_run_checklist.md  reproducibility_audit_20260522.md  research_infrastructure_roadmap_20260521.md  self_model_diagnostics_20260521.md  transformer_construct_variants_20260522.md  tutorial_custom_adapter.md
examples/: 01_reference_quickstart.py  02_online_mind_lab_minimal.py
mind_lab/: __init__.py  alife.py  distributed.py  evaluation.py  manager.py  safety.py  thalamus.py  transformer.py  utils.py  validation.py
scripts/: analyze_high_self_low_agency.py  benchmark_mind_lab_smoke.py  benchmark_online_runner.py  benchmark_reference_report.py  build_submission_package.py  diagnose_transformer_high_correlation.py  ensure_alife_coverage.py  finalize_statistics.py  generate_construct_validation_figures.py  generate_paper_figures.py  generate_paper_figures_v2.py  generate_paper_statistics.py  generate_supplementary_figures.py  (+24 more)
(+74 files in other folders)
